--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -9,34 +9,82 @@
 
   .hero {
     max-width: 200px;
+  }
+  span {
+    display: flex;
+    gap: 25px;
+    justify-content: center;
 
-    span {
-      display: flex;
-      gap: 25px;
-      justify-content: center;
+    a {
+      margin: 0;
 
-      a {
-        margin: 0;
-
-        img {
-          width: 30px;
-        }
+      img {
+        width: 30px;
+      }
+      img:hover {
+        transform: scale(1.1);
+        transition: box-shadow 50ms ease-in;
+      }
+      img:active {
+        transform: translateY(2px);
       }
     }
-    a {
-      width: fit-content;
-      align-self: center;
-    }
-
-    button {
-      background-color: var(--btn-color);
-      color: var(--btn-text-color);
-      border-radius: 50px;
-      width: 120px;
-      height: 50px;
-      font-size: 20px;
-      font-weight: bold;
-      box-shadow: 0 4px 4px rgba(0, 0, 0, 0.5);
-    }
   }
+
+  a {
+    width: fit-content;
+    align-self: center;
+  }
+
+  button {
+    background-color: var(--btn-color);
+    color: var(--btn-text-color);
+    border-radius: 20px;
+    border: none;
+    width: 120px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    transition: box-shadow 200ms ease-in-out, tranform 200ms ease-in-out;
+    margin-top: 20px;
+  }
+
+  button:hover {
+    transform: scale(1.05);
+  }
+
+  button:active {
+    transform: translateY(2px);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+  }
+}
+
+.ColorModeConrainer {
+  position: relative;
+}
+
+.colormode {
+  position: absolute;
+  right: 0;
+  width: 30px;
+}
+.colormode:hover {
+  cursor: pointer;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 25px;
+}
+
+.des {
+  max-width: 20ch;
+  align-self: center;
+}
+.des:hover {
+  font-weight: bold;
+  transition: ease-in-out;
 }
