--- a/src/App.css
+++ b/src/App.css
@@ -64,86 +64,42 @@ p {
   justify-content: center;
 }
 
-.sectionTitile {
+.sectionTitle {
   margin-bottom: 30px;
 }
 .hover {
   cursor: pointer;
 }
 
-/* :root {
-  --background-color: #fff;
-  --btn-color: #0987f2;
-  --btn-text-color: #fff;
-  --project-bg: #ffffff00;
-  --text-color: #222222f3;
-  --form-text-color: #555;
-  --footer-text-color: #909090;
+@media (width >= 800px) {
+  #root {
+    gap: 100px;
+  }
+  h1 {
+    font-size: 48px;
+  }
+  h2,
+  h3 {
+    font-size: 24px;
+  }
+  p {
+    font-size: 18px;
+  }
+
+  .sectionTitle {
+    margin-bottom: 60px;
+  }
 }
 
-[data-theme="dark"] {
-  --background-color: #222;
-  --btn-color: #ffffff;
-  --btn-text-color: #222;
-  --project-bg: #fff;
-  --text-color: #fff;
-  --form-text-color: #fff;
-  --footer-text-color: #bbb;
-}
+@media (width >= 1400px) {
+  #root {
+    gap: 200px;
+  }
+  h1 {
+    font-size: 48px;
+  }
 
-#root {
-  display: flex;
-  flex-direction: column;
-  gap: 60px;
+  .sectionTitle {
+    margin-bottom: 75px;
+  }
 }
-
-body {
-  background-color: var(--background-color);
-  display: flex;
-  justify-content: center;
-  margin: 0 auto 50px;
-}
-
-h1,
-h2,
-h3,
-p {
-  color: var(--text-color);
-  margin: 0;
-  padding: 0;
-}
-
-h2,
-h3,
-p {
-  font-family: "Roboto Mono", "monospace";
-}
-
-h1,
-h2 {
-  text-transform: uppercase;
-}
-
-h2,
-h3 {
-  font-size: 20px;
-}
-
-h1 {
-  font-family: "Poppins", sans-serif;
-  font-size: 32px;
-}
-
-p {
-  font-size: 16px;
-  font-weight: 300;
-  justify-content: center;
-}
-
-.sectionTitile {
-  margin-bottom: 30px;
-}
-
-.hover {
-  cursor: pointer;
-} */
