--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -19,7 +19,7 @@
       margin: 0;
 
       img {
-        width: 30px;
+        width: 40px;
       }
       img:hover {
         transform: scale(1.1);
@@ -87,4 +87,26 @@
 .des:hover {
   font-weight: bold;
   transition: ease-in-out;
+}
+
+@media (width >= 800px) {
+  .container {
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+    min-height: 100vh;
+    .hero {
+      max-width: 350px;
+      width: 350px;
+    }
+  }
+}
+@media (width >= 1400px) {
+  .container {
+    .hero {
+      max-width: 400px;
+      width: 400px;
+    }
+  }
 }
