--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -182,11 +182,11 @@ hr {
 
 /* Try new styles */
 :root {
-  --skills-text-color: #222222f3;
+  --skills-text-color: #000000f3;
   --skills-bg-color: #ffffff;
   --skills-icon-color: #4caf50;
   --skills-hover-color: #0987f2;
-  --skills-hover-bg-color: #f0f0f0;
+  --skills-hover-bg-color: #ebeaea;
   --skills-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   --skills-hover-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   --hr-width: 80%;
@@ -213,8 +213,8 @@ hr {
 }
 
 .container h1 {
-  margin-top: 20px;
-  padding-bottom: 20px;
+  margin-top: 10px;
+  padding-bottom: 50px;
 }
 
 .skillList {
@@ -230,7 +230,7 @@ hr {
   display: flex;
   align-items: center;
   gap: 10px;
-  padding: 10px 20px;
+  padding: 10px 10px;
   background-color: var(--skills-bg-color);
   border-radius: 5px;
   box-shadow: var(--skills-box-shadow);
@@ -262,4 +262,18 @@ hr {
   border: none;
   background-color: var(--hr-color);
   margin: 30px auto;
+}
+
+@media (width >= 800px) {
+  .skillList {
+    max-width: fit-content;
+    gap: 30px;
+
+    p {
+      font-size: 18px;
+    }
+  }
+  hr {
+    width: 300px;
+  }
 }
